# interactive-secondary-motion

./: .gitignore  CMakeLists.txt  interactive-secondary-motion.sln
include/: BendingConstraint.h  DistanceConstraint.h  FFMPEGRecorder.h  Mesh.h  Model.h
interactive-secondary-motion/: interactive-secondary-motion.vcxproj  interactive-secondary-motion.vcxproj.filters
interactive-secondary-motion/include/: BendingConstraint.h  Camera.h  CollisionConstraint.h  Constraint.h  CoordGrid.h  DistanceConstraint.h  FFMPEGRecorder.h  Mesh.h  Model.h  ModelViewProjectionShader.h  RigidSphere.h  Shader.h  TwVars.h  config.h.in
interactive-secondary-motion/resource/shaders/: grid.frag  simple.frag  simple.vert  skinning.frag  skinning.vert
interactive-secondary-motion/src/: CoordGrid.cpp  Model.cpp  ModelViewProjectionShader.cpp  RigidSphere.cpp  main.cpp
resource/models/mesh1/: head.blend  head.blend1  head.dae  head2.blend1
resource/models/mesh2/: head.dae  head2.dae
resource/shaders/: ball.frag  ball.vert  grid.vert
src/: Camera.cpp  Mesh.cpp  Model.cpp  ModelViewProjectionShader.cpp  RigidSphere.cpp  Shader.cpp  main.cpp
